--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://www.instagram.com/p/CIyKMIpBhtVPGFjBk1x5Op1BkSm2zBT6kOZcxc0/" alt="logo">
+	<h3>Errolla Prakash</h3>
+	<a href="https://www.linkedin.com/feed/">LinkedIn</a>
+	<br>
+	<section id="skils">
+		
+		<ol><b>Skils</b>
+			
+			<li>JAVA</li>
+			<li>SQL</li>
+			<li>DBMS</li>
+			<li>Java Script</li>
+			<li>HTML</li>
+			<li>CSS</li>
+		</ol>
+	</section>
+	<section id="projects">
+		
+		<ul><b>Projects</b>
+			
+			<li>Ping-pong-game</li>
+			<li>BlinkIT-clone</li>
+			<li>Responsive portfolio</li>
+			
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
