--- a/main.html
+++ b/main.html
@@ -9,12 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<img src="https://www.instagram.com/p/CIyKMIpBhtVPGFjBk1x5Op1BkSm2zBT6kOZcxc0/" alt="logo">
-	<h3>Errolla Prakash</h3>
+	<h1>Errolla Prakash</h1>
 	<a href="https://www.linkedin.com/feed/">LinkedIn</a>
 	<br>
-	<section id="skils">
+	<section id="skills">
 		
-		<ol><b>Skils</b>
+		<ol><b>Skills</b>
 			
 			<li>JAVA</li>
 			<li>SQL</li>
